next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
------------------------------------------------- 

- Union layer: Fixed the crash when styling source layers using attributes (#3870)

- Added GEOS difference operator to expression support (#3871) 

Version 6.0.0 (2011-05-11)
--------------------------

- apply fix for #3834 on legend icon rendering (#3866)

- Union layer: Fixed a potential seg fault in msUnionLayerNextShape (#3859)

- Cluster layer: Fixed the problem when returning undefined attribute (#3700)

- Union layer: Fix for the item initialization at the source layer (#3859)

- Union layer: Fixed the potential seg fault when STYLEITEM AUTO is used (#3859)

Version 6.0.0-rc2 (2011-05-05)
------------------------------

- Fixed seg fault with [shpxy] tag... (#3860)

- Removed obsolete msQueryByOperator() function

- Call msLayerClose() before msLayerOpen() in the various query 
  functions (#3692)

- Fix WMS 1.3.0 to use full list of epsg codes with inverted axis (#3582)

- PHP/Mapscript: Added getResultsBounds() method in layer object (#2967)

- Fix SLD containing a PropertyIsLike filter (#3855)

- Fixed msUnionLayerNextShape to return correct values (#3859)  

- Union layer: fix for the failure if one or more of the source layers 
  are not in the current extent (#3858)

- Fix memory leak in msResampleGDALToMap() (#3857)

- Fix missing initialization of default formats in WCS 1.x.

- Fix maxoverlapangle when value is set to 0 (#3856)

Version 6.0.0-rc1 (2011-04-27)
------------------------------

- Fix for the styleitem handling with union layer (#3674)

- Fixed mindistance label test to check layer indexes. (#3851)

- Fixed segmentation fault in PHP/MapScript and improved the php object
  method calls (#3730)
